--- a/Kbvm.TriMetTransitInfo.Functions/Kbvm.TriMetTransitInfo.Functions/Kbvm.TriMetTransitInfo.Functions.csproj
+++ b/Kbvm.TriMetTransitInfo.Functions/Kbvm.TriMetTransitInfo.Functions/Kbvm.TriMetTransitInfo.Functions.csproj
@@ -10,6 +10,10 @@
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.1.3" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Kbvm.TriMetTransitInfo.Cache\Kbvm.TriMetTransitInfo.Cache.csproj" />
+    <ProjectReference Include="..\Kbvm.TriMetTransitInfo.Dto\Kbvm.TriMetTransitInfo.Dto.csproj" />
+  </ItemGroup>
+  <ItemGroup>
     <None Update="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
